Unreleased

- Sektionsfahren: Auf PDF Rangliste auch Striping zur besseren Lesbarkeit
  eingeführt.

- Sektionsfahren: Auf Rangliste weitere Alterskategorien eingefügt:
    18-42: Überprüfung der 80% Regel
      ≤20: Zunft zum Giritz Wanderpreis

- Ältestes Fahrerpaar: Neue Rangliste, hauptsächlich fürs Eidgenössische.

- Generationenpaar: Neue Disziplin, um den Generationenpreis auszuwerten.

- Richtzeiten: In Wynau 2025 beim Posten E-G gab es zu lange Zeiten, die zu
  sehr wenigen Punkten führten. Leider ist es nicht aufgefallen, weil es
  tatsächlich lange Zeiten gab. Darum nun einen Link auf das Notenblatt
  eingefügt, damit man sehr schnell die anderen Zeiten sehen kann.

- Sektionsfahren: Mehrere Sektionen können nun auf der Rangliste den gleichen
  Platz einnehmen. Entspricht einer Änderung im Wettkampfreglement von November
  2024.

- Gruppenschnüren: Nummerierung Gruppen der gleichen Sektion zusätzlich pro
  Kategorie, z.B. Gruppe "Diessenhofen" in JP, "Diessenhofen-1" und
  "Diessenhofen-2" in Aktive. Vorher gab es dann ein "Diessenhofen-3" in JP.

- Beste Schiffe pro Sektion: Bei Punktgleichheit (z.B. zweite/dritte Position
  beim Glanzenburgcup 2025) erscheint die Punktzahl wieder.


Version 3.3.0 (28. Mai 2025)

- Schwimmen/Einzelschnüren: Einführung Kategorie FII und FIII

- Fix: Disziplinen mit Umlauten, z.B. "Bootsfährenbau" und "Einzelschnüren",
  können wieder wie gehabt dazugefügt werden.

- Sektionsfahren: Notenblätter aller Sektionen mit einem Click drucken.

- Fix: Im Sektionsfahren werden die Punkte wieder mit 3 Stellen nach dem Komma
  dargestellt. Mit Version 3.2.3 (93a6a46d167db93db49e9b146aa5e042d6a47739)
  sollte einfach das Dezimaltrennzeichen ',' durch '.' ersetzt werden. Dabei
  ist jedoch fälschlicherweise auf nur 1 Stelle nach dem Komma gerundet worden.


Version 3.2.4 (23. Mai 2025)

- Sektionsfahren: Mache Werbung für ranglisten.pontonier.ch auf PDFs.


Version 3.2.3 (22. Mai 2025)
