@@ -1,0 +1,27 @@
+# Generated by Django 5.0.4 on 2025-06-21 18:10
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('sasse', '0006_generationenpaar'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='wettkampf',
+            name='EIDG',
+            field=models.BooleanField(default=False, help_text='Ist es ein Eidgenössisches? Hat Einfluss auf Ranglisten'),
+        ),
+        migrations.AddField(
+            model_name='wettkampf',
+            name='sektion',
+            field=models.ForeignKey(default=0, # SPSV
+                                    help_text='Durchführende Sektion',
+                                    on_delete=models.SET(0), # SPSV again
+                                    to='sasse.sektion'),
+            preserve_default=False,
+        ),
+    ]
