@@ -1,0 +1,38 @@
+# Generated by Django 5.0.4 on 2025-06-21 18:22
+
+from django.db import migrations
+
+def mark_eidgenoessische(apps, schema_editor):
+    Wettkampf = apps.get_model("sasse", "Wettkampf")
+    for w in Wettkampf.objects.all():
+        if w.id == 10: # Klingnau
+            w.EIDG = True
+            w.sektion_id = 18
+            w.name = "Klingnau" # Nur Sektionsname
+        elif w.id == 35: # Mumpf
+            w.EIDG = True
+            w.sektion_id = 23
+        elif w.id == 79: # Bremgarten
+            w.EIDG = True
+            w.sektion_id = 10
+        elif w.id == 99: # Aarburg
+            w.EIDG = True
+            w.sektion_id = 2
+            w.zusatz = "41. Eidgenössisches"
+        w.save()
+
+def add_generationen(apps, schema_editor):
+    Disziplinart = apps.get_model("sasse", "Disziplinart")
+    d = Disziplinart(name="Generationenpaar")
+    d.save()
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('sasse', '0007_wettkampf_eidg_wettkampf_sektion'),
+    ]
+
+    operations = [
+        migrations.RunPython(mark_eidgenoessische),
+        migrations.RunPython(add_generationen),
+    ]
